--- a/web/src/index.css
+++ b/web/src/index.css
@@ -43,7 +43,7 @@
     @apply flex flex-col gap-5;
     > li > ul { @apply pt-4 flex flex-col gap-4; }
     > li button,
-    > li a { @apply flex items-center gap-3 text-black text-xl font-bold; }
+    > li a { @apply flex items-center gap-3 text-black text-xl font-bold hover:text-veryLightBlue; }
   }
 
   footer {
