--- a/web/src/index.css
+++ b/web/src/index.css
@@ -147,6 +147,7 @@
     }
   }
 
+  .app-form,
   .auth-form {
     label {
       @apply text-4xl font-bold m-0 p-0 block tracking-tight leading-none text-black mb-2;
@@ -159,6 +160,9 @@
     input[type="password"] {
       @apply border-4 border-black text-3xl font-bold tracking-tight h-[95px] w-full px-8 outline-none focus:border-veryLightBlue m-0 bg-transparent;
       &.error { @apply border-destructive; }
+    }
+    textarea {
+      @apply py-[22px]
     }
     .field { @apply mb-8; }
     .error { @apply text-destructive font-bold; }
@@ -189,7 +193,7 @@
   }
 
   .interior-grid {
-    @apply grid h-full w-full grid-cols-[1fr_345px];
+    @apply grid w-full grid-cols-[1fr_345px];
   }
 
   .page-title {
